gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-auth
  labels:
    app: mern-auth
spec:
  selector:
    app: mern-auth
  ports:
    - name: http
      port: 9191
      targetPort: 9191
  type: ClusterIP
